Projet_GL/src/test/deca/context/valid/unprovided/testObjet/empty_class.deca
// Description:
//   Définition d'une classe avec 2 méthodes
//
// Resultat:
//    Aucune erreur attendue
//
// Historique:
//    cree le 18/01/2018

class A {

}
